<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="company">北方网</string>
    <string name="app_name">E采编</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_scan_hint">尚未绑定任何系统，请扫描系统中手机发新闻功能页对应二维码进行添加</string>
    <string name="login_remember_pwd_checkbox">记住密码</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    
    <string name="welcome_pager_pic">引导图</string>
    <string name="to_main_activity">点击进入</string>
    <string name="skip_to_main_activity">跳过</string>
    
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="submit_btn_common">确定</string>
    
    <string name="normal_news_title_text">普通新闻</string>
    <string name="my_news_title_text">我的新闻</string>
    <string name="news_live_title_text">图文直播</string>
    <string name="material_upload_title_text">素材上传</string>
    <string name="security_setting_title_text">安全设置</string>
    <string name="news_sub_title_Text">新闻中心</string>
    <string name="about_title_text">关于</string>
    <string name="news_list_view_default_text">暂无可查看的新闻</string>
    
    <string name="btnToMaterialBtnActivity">跳转到素材按钮动画实现页面</string>
    <string name="btnToPullableWebViewActivity">跳转到webView控件+下拉刷新+上拉加载更多</string>
    <string name="btnToCrossWalkActivity">跳转到CrossWalk控件+下拉刷新+上拉加载更多</string>
    <string name="btnToNewsListActivity">新闻列表</string>
    <string name="btnToMaterialUploadActivity">素材上传</string>
    <string name="materialUploadBtnGroupHint">随时随地上传视频</string>
    <string name="imgBtnAddPic">照相</string>
    <string name="imgBtnChoosePic">相册</string>
    <string name="imgBtnAddVideo">录像</string>
    <string name="imgBtnChooseVideo">视频</string>
    
    <!-- <string name="material_upload_file_type_text_pic">图片</string>
    <string name="material_upload_file_type_text_video">视频</string>
    <string name="material_upload_type_from_phone">手机上传</string>
    <string name="material_upload_type_from_all">所有历史</string> -->

    <string name="channel_search_title_text">选择频道</string>
    <string name="channel_search_title_confirm">完成</string>
    <string name="channel_search_edit_hint">请输入频道名称筛选</string>
    <string name="channel_search_no_change_text1">已选择：</string>
    <string name="channel_back_to_prev_search">上一级</string>
    
    <string name="news_search_title_reset">重置</string>
    <string name="news_search_et_news_id_hint">新闻ID</string>
    <string name="news_search_et_keyword_hint">关键词</string>
    
    <string name="upload_pic_artwork_pic">原图</string>
    <string name="upload_pic_middle_pic">中图</string>
    <string name="upload_pic_small_pic">小图</string>
    <string name="preview">预览</string>
    <string name="complete">完成</string>
    <string name="checkPicComplete">0/9完成</string>
    <string name="select">选择</string>
    <string name="upload_pic_add_pic_group_hint">请填写图片组名称</string>
    <string name="upload_pic_explanation">说明：点击图片上的“红叉”按钮可删除图片</string>
    
    <string name="change_pwd_et_prev_pwd_hint">原密码</string>
    <string name="change_pwd_et_new_pwd_hint">新密码</string>
    <string name="change_pwd_et_new_pwd_comfirm">密码确认</string>
    
    <string name="about_project_name">CMS</string>
    <!-- <string name="about_version">版本号：手机发新闻1.0</string> -->
    <string name="about_add_projects">已添加系统</string>
    <string name="back">返回</string>
    
    <string name="songqian">送签</string>
    <string name="save">保存</string>
    <string name="save_and_quit">存退</string>
    <string name="add_reading_pic">添加导读图片</string>
    <string name="add_reading_pic_edittext_hint">新闻标题：</string>
    <string name="mobile_title_text_view">移动标题：</string>
    <string name="channel_search_text_view">频道：</string>
    <string name="template_search_text_view">模版：</string>
    <string name="template_search_4g_text_view">4g模版：</string>
    <string name="manuscripts">稿源：</string>
    <string name="keyword">关键词：</string>
    <string name="enclosure">附件</string>
    <string name="reset">重置</string>
    <string name="typesetting">排版</string>
    <string name="add_manuscripts_hint">添加稿源</string>
    <string name="selectable_manuscripts">可选稿源：</string>
    <string name="add_keyword_hint">添加关键词</string>
    <string name="convergent_news_check_box">融合新闻</string>
</resources>
