<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/titleBtnsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end|center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/songqianTV"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/songqian"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/saveTV"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/previewTV"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/preview"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/saveAndQuitTV"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/save_and_quit"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>