<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material_upload_btn_group_bg"
    >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:minHeight="150dip"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:layout_alignParentTop="true"
	    >
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/materialUploadBtnGroupHint"
	        android:layout_marginBottom="@dimen/margin_bottom_common"
	        android:textColor="@color/white"
	        />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        >
	        
	        <LinearLayout 
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.2"
	            android:gravity="center_horizontal"
	            android:orientation="vertical">
	            
	            <ImageButton
			        android:id="@+id/imgBtnAddPic"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@drawable/iconfont_paizhao"
			        android:contentDescription="@string/imgBtnAddPic"
			        android:padding="@dimen/material_btn_padding"
			        />
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/imgBtnAddPic"
	                android:textColor="@color/white"/>
	            
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.2"
	            android:gravity="center_horizontal"
	            android:orientation="vertical">
	            
	            <ImageButton
			        android:id="@+id/imgBtnChoosePic"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@drawable/iconfont_tupian"
			        android:contentDescription="@string/imgBtnChoosePic"
			        android:padding="@dimen/material_btn_padding"
			        />
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/imgBtnChoosePic"
	                android:textColor="@color/white"/>
	            
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.2"
	            android:gravity="center_horizontal"
	            android:orientation="vertical">
	            
	            <ImageButton
			        android:id="@+id/imgBtnAddVideo"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@drawable/iconfont_iconluxiang"
			        android:contentDescription="@string/imgBtnAddVideo"
			        android:padding="@dimen/material_btn_padding"
			        />
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/imgBtnAddVideo"
	                android:textColor="@color/white"/>
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_bottom_common"
        android:gravity="center_horizontal">
        
        <ImageView 
            android:id="@+id/materialUploadBtnGroupScrollBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/news_sub_title_channel_iv"/>
        
    </LinearLayout>
    
</RelativeLayout>
