<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/news_operate_btn_layout_height"
        android:orientation="vertical" >

        <!-- 标题 -->

        <include layout="@layout/common_title_iv_tv_tv" />

        <!-- 搜索框 -->

        <RelativeLayout
            android:id="@+id/channelSearchEditLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/channel_search_line_layout_height"
            android:background="@color/gray" >

            <AutoCompleteTextView
                android:id="@+id/channelSearchEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:completionThreshold="1"
                android:drawableEnd="@drawable/edit_text_cross"
                android:drawableLeft="@drawable/edit_text_search"
                android:drawableRight="@drawable/edit_text_cross"
                android:drawableStart="@drawable/edit_text_search"
                android:gravity="center"
                android:hint="@string/channel_search_edit_hint"
                android:inputType="none" />
        </RelativeLayout>

        <!-- 当前选中频道和返回上一级按钮 -->

        <RelativeLayout
            android:id="@+id/contentAndBackToPrevLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" >

            <!-- 当前选中频道 -->

            <LinearLayout
                android:id="@+id/channelSearchContentLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/channelSearchCheckedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/channel_search_common_text_size" />
            </LinearLayout>

            <!-- 返回上一级 -->
            <!-- android:background="@drawable/checked_blue" -->

            <LinearLayout
                android:id="@+id/channelBackToPrevSearchLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/channel_back_to_prev_search_layout_margin_right"
                android:layout_marginRight="@dimen/channel_back_to_prev_search_layout_margin_right"
                android:layout_marginTop="@dimen/channel_back_to_prev_search_layout_margin_top"
                android:background="@drawable/common_radius_and_stroke"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/back_to_prev_sm"
                    android:drawableStart="@drawable/back_to_prev_sm"
                    android:gravity="center"
                    android:text="@string/channel_back_to_prev_search"
                    android:textSize="@dimen/channel_search_common_text_size" />
            </LinearLayout>
        </RelativeLayout>

        <!-- 当前选中频道对应的下级频道 -->

        <com.enorth.cms.widget.listview.newslist.NewsListListView
            android:id="@+id/childChannelListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.enorth.cms.widget.listview.newslist.NewsListListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/hintRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/newsListViewDefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/news_list_view_default_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/news_list_view_default_text" />
    </RelativeLayout>

</RelativeLayout>